----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-08-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, new error.php: patch #1258978, move common
      code for error pages out of common.lib.php, thanks to Sebastian Mendel
    * lang/german*: bug #1258956, typo

2005-08-19 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/chinese_traditional: Updates, thanks to Siu Sun.
    * lang/japanese: updated, thanks to Tadashi Jokagi (elf2000)

2005-08-18 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/indonesian: Update thanks to Rachim Tamsjadi - tamsy.
    * lang/galician: Updates, thanks to Xosé Calvo.
    * lang/brazilian-portuguese: update, thanks to Airon Luis Pereira
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat.
    * lang/bulgarian:  Updated, thanks to Stanislav Yordanov (stanprog).
    * lang/estonian: Update thanks to Alvar Soome - finsoft.
    * lang/slovak: update, thanks to Ivan Kuriscak - shylauda69
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).
    * lang/catalan update, thanks to Xavier Navarro (xavin).
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza)
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * lang/azerbaijani: update, thanks to Shehriyar Imanov (sheki).

2005-08-16 Marc Delisle  <lem9@users.sourceforge.net>
    * css/phpmyadmin.css.php, db_details_links.php, querywindow.php,
      server_links.inc.php, tbl_properties_links.php, libraries/common.lib.php
      themes/*/css/theme_right.css.php, themes/original/img/error.ico:
      patch #1252031, CSS for navigation tabs, thanks to Sebastian Mendel

2005-08-15 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1259951, invalid argument for foreach()

2005-08-14 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: $goto was not encoded in the form, resulting in a
      problem after editing/saving a row (seen in IE6)